Changed around one piece and added new content and cover photo.

--- a/index.html
+++ b/index.html
@@ -407,53 +407,44 @@ layout: default
         </a>
         <div class="unit text">
             <div class="portfolio-title-div">
-              <h3 class="unit portfolio-title">4 Articles 1 Concept</h3>
+              <h3 class="unit portfolio-title">tourist snapshots</h3>
               <p class="portfoliosubheads">multi-page magazine design</p>
-              <p class="portfoliosubheads">the goal for this piece was to take four separate articles and create a multi-page document with the same theme applied to all. used my own photography for all articles and created using inDesign. assigned in class at Algonquin College - Graphic Design.</p>
+              <p class="portfoliosubheads">the goal for this project was to take any article from longform.org and create a multi page magazine layout that carries the same theme through out. We needed to take into account the theme of the specific article and reflect that with the design. made for Algonquin College - Graphic Design. All of it was created using inDesign.</p>
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
-                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
-                  <img src="images/spreads/photo1.jpg" class="portimages" alt="original article photo one">
-                </div>
-                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
-                  <img src="images/spreads/photo2.jpg" class="portimages" alt="original article photo two">
-                </div>
-                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
-                  <img src="images/spreads/photo3.jpg" class="portimages" alt="original article photo three">
-                </div>
-                <div class="unit unit-xs-1-2 unit-s-1-2 unit-m-1-4 unit-l-1-4">
-                  <img src="images/spreads/photo4.jpg" class="portimages" alt="original article photo four">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+                  <img src="images/spreads/styletile.jpg" class="portimages" alt="style tile of aesthetic of the whole article">
                 </div>
                 <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread1.jpg" class="portimages" alt="spread page 1-2 pink">
+                  <img src="images/spreads/process.jpg" class="portimages" alt="process shot of designing the article">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread2.jpg" class="portimages" alt="spread page 3-4 pink">
+                <div class="unit unit-xs-1-3 unit-s-1-3 unit-m-1-3 unit-l-1-3">
+                  <img src="images/spreads/black.jpg" class="portimages" alt="black colour swatch">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread3.jpg" class="portimages" alt="spread page 1-2 green">
+                <div class="unit unit-xs-1-3 unit-s-1-3 unit-m-1-3 unit-l-1-3">
+                  <img src="images/spreads/article.jpg" class="portimages" alt="first page of article">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread4.jpg" class="portimages" alt="spread page 3-4 green">
+                <div class="unit unit-xs-1-3 unit-s-1-3 unit-m-1-3 unit-l-1-3">
+                  <img src="images/spreads/yellow.jpg" class="portimages" alt="yellow colour swatch">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread5.jpg" class="portimages" alt="spread page 1-2 blue">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+                  <img src="images/spreads/article2.jpg" class="portimages" alt="second page of article">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread6.jpg" class="portimages" alt="spread page 3-4 blue">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+                  <img src="images/spreads/article3.jpg" class="portimages" alt="third page of article">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread7.jpg" class="portimages" alt="spread page 1-2 purple">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+                  <img src="images/spreads/article4.jpg" class="portimages" alt="fourth page of article">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/spread8.jpg" class="portimages" alt="spread page 3-4 purple">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+                  <img src="images/spreads/article5.jpg" class="portimages" alt="fifth page of article">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/application1.jpg" class="portimages" alt="spread application one">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+                  <img src="images/spreads//magazinemockup.jpg" class="portimages" alt="article shown on magazine spread">
                 </div>
-                <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-                  <img src="images/spreads/application2.jpg" class="portimages" alt="spread application two">
+                <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+                  <img src="images/spreads/tablet.jpg" class="portimages" alt="article shown on magazine spread">
                 </div>
               </div>
             </div>
