Small tweaks to paragraphs and fixing small typos.

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ layout: default
             <div class="portfolio-title-div">
               <h3 class="unit portfolio-title">Haunt : Photography series</h3>
               <p class="portfoliosubheads">concept and photographs : jess paget // help and model : amelinda everett</p>
-              <p class="portfoliosubheads">series created to portray the haunting feelings of guilt, fear, anxiety, or anything that may haunt a human in their daily life. I chose to take these photos with my Polaroid camera instead of my SLR because it leaves the photos looking old, grainy, and even a little bit dingy which fit the series perfectly. I then edited using Lightroom.</p>
+              <p class="portfoliosubheads">series created to portray the haunting feelings of guilt, fear, anxiety, or anything that may haunt a human in their daily life. I chose to take these photos with my Polaroid camera instead of my SLR because it leaves the photos looking old, grainy, and even a little bit dingy which fit the series perfectly. I then scanned and edited using Lightroom.</p>
             </div>
             <div class="portfoliocontent portfolio-content">
               <div class="grid">
