--- a/404.html
+++ b/404.html
@@ -4,5 +4,5 @@ layout: default
 
   <div class="error">
     <h1 class="errorpageh1">oops!</h1>
-    <p class="errorpagep">just fixing some bugs for ya</p>
+    <p class="errorpagep">just fixing some bugs for ya..</p>
   </div>
